added array and memory

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>DSA Arrays</title>
 </head>
 <body>
-    
+    <script src="Array.js"></script>
+    <script src="memory.js"></script>
 </body>
 </html>
